@@ -19,6 +19,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
@@ -49,8 +50,8 @@ public class SecurityConfig {
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
 		configuration.setAllowedOrigins(
-			Arrays.asList("https://api.review-canvas.com"));
-		configuration.setAllowedMethods(Arrays.asList("*"));
+			List.of("http://localhost:3000", "http://localhost:3001", "http://localhost:3002"));
+		configuration.setAllowedMethods(List.of("*"));
 		configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
 		configuration.setAllowCredentials(true);
 		configuration.setMaxAge(3600L); // 1시간
